...
                android:visibility="@{walkViewModel.stepCounterNotAvailableVisibility}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/tv_steps_taken"
                style="@style/TextAppearance.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:text="@{String.valueOf(walkViewModel.stepsTaken)}"
                app:layout_constraintBottom_toTopOf="@+id/button_start"
...
                android:background="@color/color_accent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_steps_label" />

        <TextView
                android:id="@+id/tv_distance_walked"
                style="@style/TextAppearance.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{String.valueOf(walkViewModel.distanceWalked)}"
                app:layout_constraintEnd_toEndOf="parent"
...
